--- a/404.html
+++ b/404.html
@@ -1,3 +1,14 @@
 
-<!-- saved from url=(0035)http://openwrt.henrysion.xyz:88/ddd -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"></head><body><h1>Not Found</h1>The requested URL /ddd was not found on this server.</body></html>
+<html>
+<head><title>404 Not Found</title></head>
+<body bgcolor="white">
+<center><h1>404 Not Found</h1></center>
+<hr><center>nginx/1.14.1</center>
+</body>
+</html>
+<!-- a padding to disable MSIE and Chrome friendly error page -->
+<!-- a padding to disable MSIE and Chrome friendly error page -->
+<!-- a padding to disable MSIE and Chrome friendly error page -->
+<!-- a padding to disable MSIE and Chrome friendly error page -->
+<!-- a padding to disable MSIE and Chrome friendly error page -->
+<!-- a padding to disable MSIE and Chrome friendly error page -->
