--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<h1>NAS HOME</h1>
 					<div id="kg-btn" class="">
 						<input class='tgl tgl-flip' id='qieh' type='checkbox' />
-						<label class='tgl-btn' data-tg-off='外部网络' data-tg-on='私有网络' for='qieh'></label>
+						<label class='tgl-btn' data-tg-off='私有网络' data-tg-on='外部网络' for='qieh'></label>
 					</div>
 				</div>
 			</div>
